Rendering issue with using sample as lamp in world settings #31987

Closed
opened 2012-07-02 13:08:25 +02:00 by Roy Gore · 7 comments

%%%I have discovered an issue which only occurs when using multi gpu rendering selected when using the sample as lamp option in the world settings using a background environment map. If only one video card is selected to use for the rendering device everything works fine.

I have included a simple blend file which on my system works if using 128 samples but if I increase them to 256 the sphere is reflecting just black. (renders fine with much higher values when using 1 gpu)

To reproduce the problem just increase the samples on the sample as lamp.

I am using 2 x GTX 570 1280Mb
I have tried 32bit and 64bit Windows 7 both have the same result.
%%%

%%%I have discovered an issue which only occurs when using multi gpu rendering selected when using the sample as lamp option in the world settings using a background environment map. If only one video card is selected to use for the rendering device everything works fine. I have included a simple blend file which on my system works if using 128 samples but if I increase them to 256 the sphere is reflecting just black. (renders fine with much higher values when using 1 gpu) To reproduce the problem just increase the samples on the sample as lamp. I am using 2 x GTX 570 1280Mb I have tried 32bit and 64bit Windows 7 both have the same result. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Brecht, could you please check on this?%%%

%%%Brecht, could you please check on this?%%%
Author

%%%Get the same result with 2 x gtx 570 2.5GB cards as well.%%%

%%%Get the same result with 2 x gtx 570 2.5GB cards as well.%%%

%%%Can you please re-test with RC1? http://download.blender.org/release/Blender2.64/%%%

%%%Can you please re-test with RC1? http://download.blender.org/release/Blender2.64/%%%
Author

%%%Still the same issue. Strangely if I reduce the value to 255 it sometimes renders correctly, and sometimes renders properly when returning it back to 256. Is it some sort of sync issue when using multi gpu?%%%

%%%Still the same issue. Strangely if I reduce the value to 255 it sometimes renders correctly, and sometimes renders properly when returning it back to 256. Is it some sort of sync issue when using multi gpu?%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31987
No description provided.