Fix/workaround #31987: sample as lamp for environment textures not working with multi GPU when resolution > 128.